2024-03-04  Bart Schaefer  <schaefer@zsh.org>

	* 52659: Src/builtin.c, Test/K01nameref.ztst: Fix crash when unset
	was called on a named referece, add regression test

	* 52650 plus minor fixes: Doc/Zsh/builtins.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/func.yo, Doc/Zsh/mod_ksh93.yo, Etc/FAQ.yo,
	Src/Modules/ksh93.c, Src/builtin.c, Src/exec.c, Src/params.c,
	Test/D04parameter.ztst, Test/K01nameref.ztst,
	Test/V10private.ztst: add -u option for named references that
	point to the "upper" scope, failed assignments have status 1

2024-03-05  Oliver Kiddle  <opk@zsh.org>

	* 52646: Completion/Zsh/Type/_ps1234, Doc/Zsh/compsys.yo,
	Doc/Zsh/compwid.yo, Src/Modules/watch.c, Src/Zle/complist.c,
	Src/Zle/zle_tricky.c, Src/prompt.c: extend support for highlight
	groups to completion explanation strings and WATCHFMT

	* 52641: midchildan: Doc/Zsh/contrib.yo, Functions/Zle/incarg,
	Test/X05zleincarg.ztst: add a backward variant and make it repeatable

2024-03-02  Bart Schaefer  <schaefer@zsh.org>

	* 52652: Src/params.c, Test/D04parameter.ztst: fix obscure bug
	unsetting the array part of a tied parameter pair, update test

	* JunT.: 52635: Test/runtests.zsh: show file name when crashed

	* 52612: Src/parse.c, Src/subst.c, Src/utils.c: change the %l
	replacment of zwarning() et al. to do literal string output;
	change previous uses to %s and use new %l for ${var?$error}

2024-03-01  Bart Schaefer  <schaefer@zsh.org>

	* 52645: Src/builtin.c: unset through a nameref keep up-scope
	parameters declared, and not wipe out the entire parameter stack

2024-02-28  Bart Schaefer  <schaefer@zsh.org>

	* 52619 (plus tests): Src/params.c, Test/A06assign.ztst: there
	is no empty element when appending array to unset scalar

2024-02-28  Oliver Kiddle  <opk@zsh.org>

	* 52622 (tweaked, c.f. 52626): Src/jobs.c: adjust number of columns
	and drop right-parenthesis in "kill -L" output

	* 52623: Src/signames2.awk: add some Solaris signal descriptions
